[tool.poetry]
name = "weather-predictor"
version = "0.1.0"
description = "A simple end-to-end MLOps pipeline for predicting tomorrow's weather in Portland, ME."
authors = ["palmtrey <palmtrey779@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
